Update basic page render

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,17 @@
-{{ test }}
+<!doctype html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta name="author" content="Ismael Ramos Merlos">
+      <meta name="description" content="Carengo test">
+
+    <title>Carengo (test)</title>
+</head>
+<body>
+    <div id="infinite-scroll" data-api="{{ productsUrl }}"></div>
+
+    <script src="js/manifest.js"></script>
+    <script src="js/carengo.js"></script>
+</body>
+</html>
