Add load data per page

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
       <meta name="description" content="Carengo test">
 
     <title>Carengo (test)</title>
+    <link href="css/carengo.css" rel="stylesheet"></link>
 </head>
 <body>
     <div id="infinite-scroll" data-api="{{ productsUrl }}"></div>
